scripts/prow/secure-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: controlplane
  namespace: istio-system
spec:
  host: aspen-mesh-controlplane.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: deck
  namespace: prow
spec:
  host: deck.prow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hook
  namespace: prow
spec:
  host: hook.prow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
